@@ -174,7 +174,8 @@ class OutputPage {
 				$name .= ' - '.$taction;
 			}
 		}
-		$this->setHTMLTitle( $name . ' - ' . wfMsg( 'wikititlesuffix' ) );
+		
+		$this->setHTMLTitle( wfMsg( 'pagetitle', $name ) );
 	}
 	function getHTMLTitle() { return $this->mHTMLtitle; }
 	function getPageTitle() { return $this->mPagetitle; }
@@ -813,13 +814,13 @@ class OutputPage {
 
 		$ret .= "<!DOCTYPE html PUBLIC \"$wgDocType\"\n        \"$wgDTD\">\n";
 
-		if ( "" == $this->mHTMLtitle ) {
-			$this->mHTMLtitle = wfMsg( "pagetitle", $this->mPagetitle );
+		if ( '' == $this->getHTMLTitle() ) {
+			$this->setHTMLTitle(  wfMsg( 'pagetitle', $this->getPageTitle() ));
 		}
 
 		$rtl = $wgContLang->isRTL() ? " dir='RTL'" : '';
 		$ret .= "<html xmlns=\"http://www.w3.org/1999/xhtml\" xml:lang=\"$wgContLanguageCode\" lang=\"$wgContLanguageCode\" $rtl>\n";
-		$ret .= "<head>\n<title>" . htmlspecialchars( $this->mHTMLtitle ) . "</title>\n";
+		$ret .= "<head>\n<title>" . htmlspecialchars( $this->getHTMLTitle() ) . "</title>\n";
 		array_push( $this->mMetatags, array( "http:Content-type", "$wgMimeType; charset={$wgOutputEncoding}" ) );
 
 		$ret .= $this->getHeadLinks();
